alignment fix for two sections

--- a/src/components/signup-form/style.module.scss
+++ b/src/components/signup-form/style.module.scss
@@ -1,8 +1,9 @@
 .container {
-  height: 586px;
-  width: 350px;
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .headerContainer {
